--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,9 @@
     "    lista.append(ultimo1 + 1)\n",
     "    return lista\n",
     "\n",
-    "cresce([3,4,5])\n"
+    "cresce([3,4,5])\n",
+    "cresce([30,40,50,60])\n",
+    "cresce([2])\n"
    ]
   }
  ],
