--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -95,17 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "lista = [1,4,0,2,3]\n",
     "\n",
-    "a = lista[0]\n",
+    "a = lista[0] # a= 1 / a=4 / a=3 / a=2 / não imprime a= 0 \n",
     "\n",
     "while (a!=0):\n",
     "    print(a)\n",
-    "    a = lista[a]\n",
+    "    a = lista[a] # lista[1]=4 / lista[4]=3 / lista[3]=2 / lista[2]=0\n",
     "    "
    ]
   },
@@ -173,8 +184,8 @@
    "source": [
     "\n",
     "def cresce(lista):\n",
-    "    i_ultimo = len(lista) - 1\n",
-    "    ultimo1 = lista[i_ultimo]\n",
+    "    i_ultimo = len(lista) - 1 # obtenho o indice do último elemento da lista\n",
+    "    ultimo1 = lista[i_ultimo] # obtenho o valor da da última posição \n",
     "    ultimo2 = lista[-1]\n",
     "    lista.append(ultimo1 + 1)\n",
     "    return lista\n",
@@ -182,6 +193,110 @@
     "cresce([3,4,5])\n",
     "cresce([30,40,50,60])\n",
     "cresce([2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n",
+      "405\n"
+     ]
+    }
+   ],
+   "source": [
+    "def funcao(a):\n",
+    "    return 3*a\n",
+    "    \n",
+    "a = 5\n",
+    "b = funcao(a)\n",
+    "c = funcao(funcao(b))\n",
+    "print(c)\n",
+    "print(funcao(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "def funcao(x):\n",
+    "    return x+x\n",
+    "\n",
+    "a = funcao(2) #  a= 4\n",
+    "\n",
+    "z  = funcao(a) # z = 8 \n",
+    "b1 = funcao(z) # b1 = 16\n",
+    "\n",
+    "b2 = funcao(funcao(a))\n",
+    "print(b2) # 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def retorna_lista(lista):\n",
+    "    maior = 0\n",
+    "    for n in range(0,len(lista)):\n",
+    "        if lista[n] > maior:\n",
+    "            maior = lista[n]\n",
+    "        else:\n",
+    "            maior \n",
+    "    return maior\n",
+    "\n",
+    "retorna_lista([9,1,10])\n",
+    "#minha_lista = [1,2,3,4,5]\n",
+    "#resultado = retorna_lista(minha_lista)\n",
+    "#print(resultado)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pega_posicao1(lista,posicao):\n",
+    "    lista[posicao]\n",
+    "\n",
+    "def pega_posicao2(lista,posicao):\n",
+    "    return lista[posicao]\n",
+    "\n",
+    "l= [10,20,30]\n",
+    "a= pega_posicao1(l,0)\n",
+    "b= pega_posicao2(l,1)\n",
+    "c= pega_posicao1(l,10)"
    ]
   }
  ],
