--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -298,6 +298,26 @@
     "b= pega_posicao2(l,1)\n",
     "c= pega_posicao1(l,10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cria_naipe(naipe):\n",
+    "    cartas = ['A', '2','3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K']\n",
+    "    resposta = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cria_baralho():"
+   ]
   }
  ],
  "metadata": {
