--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -248,18 +248,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
     }
    ],
    "source": [
@@ -273,7 +270,8 @@
     "    return maior\n",
     "\n",
     "retorna_lista([9,1,10])\n",
-    "#minha_lista = [1,2,3,4,5]\n",
+    "\n",
+    "print(minha_lista)\n",
     "#resultado = retorna_lista(minha_lista)\n",
     "#print(resultado)\n",
     "\n",
@@ -297,6 +295,191 @@
     "a= pega_posicao1(l,0)\n",
     "b= pega_posicao2(l,1)\n",
     "c= pega_posicao1(l,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para que a função abaixo retorne o elemento desejado da lista, é necessário adicionar uma instrução return. Se não colocar, irá retorna None. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def pega_posicao(lista,posicao):\n",
+    "    lista[posicao]\n",
+    "\n",
+    "a = pega_posicao([10,20,30],2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def pega_posicao(lista,posicao):\n",
+    "    return lista[posicao]\n",
+    "    \n",
+    "\n",
+    "a = pega_posicao([10,20,30],2)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em Python, os nomes das variáveis utilizadas dentro de uma função devem corresponder exatamente aos nomes dos parâmetros definidos na assinatura da função para que possam referenciar os valores passados durante a chamada da função."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pega_posicao(lista,posicao):\n",
+    "    return l[p] #dará NameError\n",
+    "    \n",
+    "\n",
+    "a = pega_posicao([10,20,30],2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No seu código, l é uma variável global. Quando passada como argumento para a função, o parâmetro lista se torna uma variável local que referencia o mesmo objeto que l.\n",
+    "\n",
+    "Conclusão:\n",
+    "\n",
+    "Não ocorre um NameError porque l é uma variável global definida antes da chamada da função. Ao passar l como argumento, a função utiliza o parâmetro lista para referenciar a mesma lista. Portanto, o código funciona corretamente e exibe \"O resultado é 10\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O resultado é 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pega_posicao2(lista,posicao):\n",
+    "    return lista[posicao]\n",
+    "\n",
+    "l= [10,20,30]\n",
+    "a= pega_posicao2(l,0)\n",
+    "print(f\"O resultado é {a}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É recomendável adicionar uma verificação para garantir que o índice fornecido (posicao) esteja dentro dos limites da lista, evitando um possível IndexError."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pega_posicao(lista, posicao):\n",
+    "    if 0 <= posicao < len(lista):\n",
+    "        return lista[posicao]\n",
+    "    else:\n",
+    "        return None  # Ou outra indicação de posição inválida\n",
+    "\n",
+    "l = [100,200,300,400] #l é declarada antes da chamada da função. \n",
+    "b= pega_posicao(l,1)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Índices negativos acessam elementos a partir do final da lista. Por exemplo, lista[-1] retorna o último elemento. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pega_posicao(lista, posicao):\n",
+    "    if posicao < 0 or posicao >= len(lista):\n",
+    "        return None  # Ou outra indicação de posição inválida\n",
+    "    return lista[posicao]\n",
+    "\n",
+    "l = [50,40,30]\n",
+    "c= pega_posicao(l,10)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [3,2,1,0]\n",
+    "\n",
+    "for x in lista:\n",
+    "    print(lista[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [3,2,1,10]\n",
+    "for x in lista:\n",
+    "    print(lista[x]) #10,1,2, out of index"
    ]
   },
   {
