--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -271,9 +271,8 @@
     "\n",
     "retorna_lista([9,1,10])\n",
     "\n",
-    "print(minha_lista)\n",
-    "#resultado = retorna_lista(minha_lista)\n",
-    "#print(resultado)\n",
+    "resultado = retorna_lista(minha_lista)\n",
+    "print(resultado)\n",
     "\n",
     "\n",
     "\n"
@@ -501,6 +500,43 @@
    "source": [
     "def cria_baralho():"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def soma(a,b):\n",
+    "    resultado = a + b\n",
+    "    return resultado\n",
+    "\n",
+    "def soma3(a,b,c):\n",
+    "    dois_primeiros = soma(a,b)\n",
+    "    resultado = soma(dois_primeiros,c)\n",
+    "    return resultado\n",
+    "\n",
+    "soma3(10,3,60)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
