--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -523,8 +523,8 @@
     "    return resultado\n",
     "\n",
     "def soma3(a,b,c):\n",
-    "    dois_primeiros = soma(a,b)\n",
-    "    resultado = soma(dois_primeiros,c)\n",
+    "    dois_primeiros = soma(a,b) # retorno da func soma será guardado aqui\n",
+    "    resultado = soma(dois_primeiros,c) # retorno da fun soma será guardado aqui\n",
     "    return resultado\n",
     "\n",
     "soma3(10,3,60)\n",
@@ -535,8 +535,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Olá, Rafael!'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def saudacao(nome):\n",
+    "    exibir_msg = f\"Olá, {nome}!\"\n",
+    "    return exibir_msg #return f\"Olá, {nome}!\"\n",
+    "\n",
+    "def exibir_saudacao(nome):\n",
+    "    mensagem = saudacao(nome)\n",
+    "    return mensagem\n",
+    "\n",
+    "exibir_saudacao(\"Rafael\")"
+   ]
   }
  ],
  "metadata": {
@@ -555,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
