funcao dentro de funcao

--- a/AulasDP.ipynb
+++ b/AulasDP.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,21 +63,21 @@
     "def funcao(x):\n",
     "    return x + x  # Retorna o dobro de x\n",
     "\n",
-    "a = funcao(2)  # a = 2 + 2 = 4\n",
+    "a = funcao(2)  # a = 2 + 2 = 4 -> a = 4\n",
     "b = funcao(funcao(2))  # b = funcao(funcao(2))\n",
     "print(b)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300\n"
+      "60\n"
      ]
     }
    ],
@@ -90,7 +90,8 @@
     "\n",
     "lista = [10, 20, 30]  # Esta variável não afeta diretamente a função soma()\n",
     "\n",
-    "print(soma([100, 200]))  # Chamada da função com a lista [100, 200]\n"
+    "#print(soma([100, 200]))  # Chamada da função com a lista [100, 200]\n",
+    "print(soma(lista))\n"
    ]
   },
   {
@@ -121,24 +122,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O método insert modifica a lista original e retorna None. Portanto, ao utilizá-lo, trabalhe diretamente com a lista que foi alterada."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, 8]\n",
-      "None\n"
+      "[7, 8]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[7, 8, 9]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lista = [7,8]\n",
     "print(lista)\n",
-    "lista_nova = lista.insert(2,9)\n",
-    "print(lista_nova)"
+    "lista.insert(2,9)\n",
+    "lista"
    ]
   },
   {
@@ -197,7 +214,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 41, 42, 43]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cresce(lista):\n",
+    "    for x in range(1,4):\n",
+    "        i_ultimo = len(lista) - 1\n",
+    "        ultimo1 = lista[i_ultimo]\n",
+    "        lista.append(ultimo1 + 1)\n",
+    "    return lista\n",
+    "\n",
+    "lista = [10,20,30,40]\n",
+    "cresce(lista)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +260,8 @@
     "    return 3*a\n",
     "    \n",
     "a = 5\n",
-    "b = funcao(a)\n",
-    "c = funcao(funcao(b))\n",
+    "b = funcao(a) #15\n",
+    "c = funcao(funcao(b)) # 45\n",
     "print(c)\n",
     "print(funcao(c))"
    ]
@@ -248,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n"
+      "10\n"
      ]
     }
    ],
@@ -271,7 +317,7 @@
     "\n",
     "retorna_lista([9,1,10])\n",
     "\n",
-    "resultado = retorna_lista(minha_lista)\n",
+    "resultado = retorna_lista([9,1,10])\n",
     "print(resultado)\n",
     "\n",
     "\n",
@@ -291,9 +337,12 @@
     "    return lista[posicao]\n",
     "\n",
     "l= [10,20,30]\n",
-    "a= pega_posicao1(l,0)\n",
+    "a= pega_posicao2(l,0)\n",
     "b= pega_posicao2(l,1)\n",
-    "c= pega_posicao1(l,10)"
+    "c= pega_posicao1(l,10)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
    ]
   },
   {
@@ -301,6 +350,30 @@
    "metadata": {},
    "source": [
     "Para que a função abaixo retorne o elemento desejado da lista, é necessário adicionar uma instrução return. Se não colocar, irá retorna None. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pega_posicao(lista, posicao):\n",
+    "    lista[posicao]\n",
+    "    return lista[posicao] \n",
+    "\n",
+    "pega_posicao([10,20,30,40,50,100],5)"
    ]
   },
   {
@@ -460,9 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "lista = [3,2,1,0]\n",
     "\n",
@@ -472,9 +556,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m lista \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m lista:\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mlista\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[43m]\u001b[49m) \u001b[38;5;66;03m#10,1,2, out of index\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "lista = [3,2,1,10]\n",
     "for x in lista:\n",
@@ -537,6 +642,66 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4\n",
+      "2 3 4\n",
+      "3 4\n",
+      "2 3 4\n",
+      "1 2 3 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maximo2(a,b):\n",
+    "    print(a,b) #3,4\n",
+    "    if a>b:\n",
+    "        return a\n",
+    "    return b\n",
+    "\n",
+    "def maximo3(a,b,c):\n",
+    "    print(a,b,c) # 2,3,4\n",
+    "    maior_resto = maximo2(b,c) # 3,4 = 4\n",
+    "    print(a,b,c) # 2,3,4\n",
+    "    if a > maior_resto:\n",
+    "        return a\n",
+    "    return maior_resto # = 4\n",
+    "\n",
+    "def maximo4(a,b,c,d): \n",
+    "    print(a,b,c,d) # 1,2,3,4\n",
+    "    maior_resto = maximo3(b,c,d) # 2,3,4 = 4\n",
+    "    print(a,b,c,d) # 1,2,3,4\n",
+    "    if a > maior_resto:\n",
+    "        return a\n",
+    "    return maior_resto\n",
+    "\n",
+    "maximo4(1,2,3,4)\n",
+    "\n",
+    "# 1,2,3,4\n",
+    "# 2,3,4\n",
+    "# 3,4\n",
+    "#2,3,4\n",
+    "# 1,2,3,4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "'Olá, Rafael!'"
@@ -576,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
